# global-agent-hackathon-may-2025

submissions/: .env_example  .gitignore  (+13 more)
submissions/AdGenius/backend/: Dockerfile  README.md  TESTING.md  app.py  create_test.py  pyproject.toml  run_tests.py
submissions/AdGenius/backend/.cursor/rules/: principles.mdc  python.mdc
submissions/AdGenius/backend/ad_publisher/: README.md  __init__.py  ad_publisher.py  service.py  test_ad_publisher.py  test_service.py
submissions/AdGenius/backend/agents/: __init__.py  ad_content_creator.py  ad_researcher.py  campaign_publisher.py  campaign_requirements_analyzer.py  constants.py  hooks.py  model.py  team.py
submissions/AdGenius/backend/agents/tests/tools/: test_parse_ad_requirements.py
submissions/AdGenius/backend/agents/tools/: ad_copy_generation.py  ad_image.py  ad_publishing.py  parse_ad_requirements.py
submissions/AdGenius/backend/chat_assistant/: README.md  __init__.py  agent.py  routes.py
submissions/AdGenius/backend/chat_assistant/endpoints/: __init__.py  common.py  conversations.py  draft_campaigns.py  messages.py  streaming.py
submissions/AdGenius/backend/database_storage/: __init__.py  database.py
submissions/AdGenius/backend/database_storage/repository/: interfaces.py  sqlite.py
submissions/AdGenius/backend/database_storage/tests/: conftest.py  test_draft_campaigns.py  test_helpers.py  test_repository.py
submissions/AdGenius/backend/google_oauth/: __init__.py  auth.py  database.py  models.py  routes.py
submissions/AdGenius/backend/utils/: README.md  __init__.py  config.py  db.py  logger.py  middleware.py  test_helpers.py  test_templates.py
submissions/eduardo-vasquez/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build_image.sh  cloud_run.sh  offline_pipeline.sh  pyproject.toml
submissions/eduardo-vasquez/docs/: Financial Review and Budget Allocation.docx
submissions/eduardo-vasquez/infra/terraform/: artifact_registry.tf  backend.conf  backend.tf  buckets.tf  iam.tf  provider.tf  secrets.tf  secrets_version.tf.example  terraform.tfvars  variables.tf  versions.tf
submissions/eduardo-vasquez/infra/terraform-bootstrap/: main.tf  terraform.tfvars  variables.tf
submissions/eduardo-vasquez/src/: app.py  main.py  requirements.txt
submissions/eduardo-vasquez/src/agents/: __init__.py  rag_agent.py  slack_agent.py  summarizer_agent.py  team_agents copy.py  team_agents.py  team_agents_slack.py  trello_agent.py
submissions/eduardo-vasquez/src/config/: config.py
submissions/eduardo-vasquez/src/utils/: __init__.py  clients.py  custom_logging.py  data_extraction.py  embedding_model.py  qdrant_db.py
(+160 files in other folders)
